// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMP Most Read Page A11y I can see the skip to content link 1`] = `"Ir al contenido"`;

exports[`AMP Most Read Page AMP Consent config 1`] = `
{
  "consents": {
    "user-consent": {
      "promptIfUnknownForGeoGroup": "eea",
      "promptUI": "consent-prompt",
    },
  },
  "policy": {
    "default": {
      "timeout": {
        "fallbackAction": "reject",
        "seconds": 0,
      },
      "waitFor": {
        "user-consent": [],
      },
    },
  },
}
`;

exports[`AMP Most Read Page AMP Geo config 1`] = `
{
  "AmpBind": true,
  "ISOCountryGroups": {
    "eea": [
      "at",
      "ax",
      "be",
      "bg",
      "bl",
      "cy",
      "cz",
      "de",
      "dk",
      "ea",
      "ee",
      "es",
      "fi",
      "fr",
      "gb",
      "gf",
      "gg",
      "gi",
      "gp",
      "gr",
      "hr",
      "hu",
      "ic",
      "ie",
      "im",
      "is",
      "it",
      "je",
      "li",
      "lt",
      "lu",
      "lv",
      "mf",
      "mq",
      "mt",
      "nc",
      "nl",
      "no",
      "pf",
      "pl",
      "pm",
      "pt",
      "re",
      "ro",
      "se",
      "si",
      "sj",
      "sk",
      "tf",
      "va",
      "wf",
      "yt",
    ],
    "gbOrUnknown": [
      "gb",
      "gg",
      "im",
      "je",
      "uk",
      "unknown",
    ],
  },
}
`;

exports[`AMP Most Read Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, Mundo",
  "url": "/mundo",
}
`;

exports[`AMP Most Read Page Footer Anchors should match text and url 2`] = `
{
  "text": "Por qué puedes confiar en la BBC",
  "url": "https://www.bbc.com/mundo/institucional-51359666",
}
`;

exports[`AMP Most Read Page Footer Anchors should match text and url 3`] = `
{
  "text": "Términos de uso",
  "url": "https://www.bbc.com/mundo/institucional-36400005",
}
`;

exports[`AMP Most Read Page Footer Anchors should match text and url 4`] = `
{
  "text": "Sobre la BBC",
  "url": "https://www.bbc.com/mundo/institucional-36400007",
}
`;

exports[`AMP Most Read Page Footer Anchors should match text and url 5`] = `
{
  "text": "Política de privacidad",
  "url": "https://www.bbc.com/mundo/institucional-36400009",
}
`;

exports[`AMP Most Read Page Footer Anchors should match text and url 6`] = `
{
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`AMP Most Read Page Footer Anchors should match text and url 7`] = `
{
  "text": "Escribe a BBC Mundo",
  "url": "https://www.bbc.co.uk/mundo/send/u50853489",
}
`;

exports[`AMP Most Read Page Footer Anchors should match text and url 8`] = `
{
  "text": "Lee sobre nuestra postura acerca de enlaces externos.",
  "url": "https://www.bbc.co.uk/editorialguidelines/guidance/feeds-and-links",
}
`;

exports[`AMP Most Read Page Footer Cookie Settings Button should match text and on handler 1`] = `
{
  "on": "tap:consent.prompt, privacy.hide, cookie.show, AMP.setState({ isManagingSettings: true })",
  "text": "Do not share or sell my info",
}
`;

exports[`AMP Most Read Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/mundo"`;

exports[`AMP Most Read Page Footer I can see the footer copyright and external linking text 1`] = `"© 2023 BBC. La BBC no se hace responsable del contenido de sitios externos. Lee sobre nuestra postura acerca de enlaces externos."`;

exports[`AMP Most Read Page Header I can see the branding 1`] = `"BBC News, Mundo"`;

exports[`AMP Most Read Page Header Navigation link should match text and url 1`] = `
{
  "text": "Noticias",
  "url": "/mundo",
}
`;

exports[`AMP Most Read Page Header Navigation link should match text and url 2`] = `
{
  "text": "América Latina",
  "url": "/mundo/topics/c7zp57yyz25t",
}
`;

exports[`AMP Most Read Page Header Navigation link should match text and url 3`] = `
{
  "text": "Internacional",
  "url": "/mundo/topics/c2lej05epw5t",
}
`;

exports[`AMP Most Read Page Header Navigation link should match text and url 4`] = `
{
  "text": "Hay Festival",
  "url": "/mundo/noticias-36795069",
}
`;

exports[`AMP Most Read Page Header Navigation link should match text and url 5`] = `
{
  "text": "Economía",
  "url": "/mundo/topics/c06gq9v4xp3t",
}
`;

exports[`AMP Most Read Page Header Navigation link should match text and url 6`] = `
{
  "text": "Ciencia",
  "url": "/mundo/topics/ckdxnw959n7t",
}
`;

exports[`AMP Most Read Page Header Navigation link should match text and url 7`] = `
{
  "text": "Salud",
  "url": "/mundo/topics/cpzd498zkxgt",
}
`;

exports[`AMP Most Read Page Header Navigation link should match text and url 8`] = `
{
  "text": "Cultura",
  "url": "/mundo/topics/c2dwq9zyv4yt",
}
`;

exports[`AMP Most Read Page Header Navigation link should match text and url 9`] = `
{
  "text": "Tecnología",
  "url": "/mundo/topics/cyx5krnw38vt",
}
`;

exports[`AMP Most Read Page Header Navigation link should match text and url 10`] = `
{
  "text": "Centroamérica Cuenta",
  "url": "/mundo/noticias-43826245",
}
`;

exports[`AMP Most Read Page Header Navigation link should match text and url 11`] = `
{
  "text": "BBC Extra",
  "url": "/mundo/noticias-48908206",
}
`;

exports[`AMP Most Read Page I can see the headline 1`] = `"Error interno del servidor"`;

exports[`AMP Most Read Page Main heading should match text 1`] = `"Error interno del servidor"`;

exports[`AMP Most Read Page SEO Canonical link 1`] = `"http://localhost:7080/mundo/popular/read"`;

exports[`AMP Most Read Page SEO Dir attribute 1`] = `"ltr"`;

exports[`AMP Most Read Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`AMP Most Read Page SEO Heading level 1 1`] = `"Error interno del servidor"`;

exports[`AMP Most Read Page SEO Lang attribute 1`] = `"es"`;

exports[`AMP Most Read Page SEO OG description 1`] = `"Más leídas - BBC News Mundo"`;

exports[`AMP Most Read Page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/mundo.png"`;

exports[`AMP Most Read Page SEO OG image alt 1`] = `"BBC News Mundo"`;

exports[`AMP Most Read Page SEO OG locale 1`] = `"es-005"`;

exports[`AMP Most Read Page SEO OG site name 1`] = `"BBC News Mundo"`;

exports[`AMP Most Read Page SEO OG title 1`] = `"Más leídas - BBC News Mundo"`;

exports[`AMP Most Read Page SEO OG type 1`] = `"website"`;

exports[`AMP Most Read Page SEO OG url 1`] = `"http://localhost:7080/mundo/popular/read"`;

exports[`AMP Most Read Page SEO Page title 1`] = `"Error interno del servidor - BBC News Mundo"`;

exports[`AMP Most Read Page SEO Robots meta tag 1`] = `"noindex,nofollow"`;

exports[`AMP Most Read Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`AMP Most Read Page SEO Twitter creator 1`] = `"@bbcmundo"`;

exports[`AMP Most Read Page SEO Twitter description 1`] = `"Error interno del servidor"`;

exports[`AMP Most Read Page SEO Twitter image alt 1`] = `"BBC News Mundo"`;

exports[`AMP Most Read Page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/mundo.png"`;

exports[`AMP Most Read Page SEO Twitter site 1`] = `"@bbcmundo"`;

exports[`AMP Most Read Page SEO Twitter title 1`] = `"Error interno del servidor - BBC News Mundo"`;
